--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "ant-design-vue": "1.4.12",
+    "axios": "0.19.2",
     "core-js": "3.6.4",
+    "easy-vuex-modules": "0.2.4",
     "moment": "2.24.0",
     "vue": "2.6.11",
     "vue-router": "3.1.5",
@@ -26,6 +28,8 @@
     "babel-eslint": "10.0.3",
     "eslint": "6.7.2",
     "eslint-plugin-vue": "6.1.2",
+    "less": "3.11.1",
+    "less-loader": "5.0.0",
     "sass": "1.25.0",
     "sass-loader": "8.0.2",
     "vue-template-compiler": "2.6.11"
